tired to fix spacing between p1 and p2
with css

--- a/acme.css
+++ b/acme.css
@@ -66,6 +66,14 @@ section {
   background-color: rgb(255,255,255);
 }
 
+/* tried to fix spacing between first and second paragraph
+
+p_two{
+  padding-top: 10px;
+  margin-top: 10px;
+}
+*/
+
 body {
   font-family: Lucida Grande;
   background-image: url("images/background-week2-homework.png");
